--- a/app/src/main/res/layout/activity_founders_list.xml
+++ b/app/src/main/res/layout/activity_founders_list.xml
@@ -15,15 +15,16 @@
         >
 
         <ImageView
+            android:id="@+id/img1"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:scaleType="fitCenter"
             android:src="@drawable/boat_founder"
-            android:id="@+id/img1"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.014" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
